bk_ida/gccida/c2/store_parm_decls
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6930:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6936:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6939:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6941:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6953:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6955:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6956:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6960:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6968:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6969:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6971:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:6975:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *pending_sizes; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:7083:19: error: expected expression
v7 = ( tree_node *)p_chain[4]; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:7083:8: error: use of undeclared identifier 'tree_node'
v7 = ( tree_node *)p_chain[4]; 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:7120:19: error: expected expression
v7 = ( tree_node *)p_chain[4]; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:7120:8: error: use of undeclared identifier 'tree_node'
v7 = ( tree_node *)p_chain[4]; 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:7206:22: error: expected expression
v24 = *( tree_node **)( v22[4] + 128LL); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:7206:10: error: use of undeclared identifier 'tree_node'
v24 = *( tree_node **)( v22[4] + 128LL); 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/c-decl.c:7207:26: error: expected expression
if ( v24 == ( tree_node *)*( &global_trees + 27) ) 
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_parm_decls/src/obj/c-decl.o] Error 1
